@@ -1,52 +1,85 @@
 plugins {
-	id 'fabric-loom' version '0.10-SNAPSHOT'
 	id 'maven-publish'
+	id "com.modrinth.minotaur" version "2.+"
+	id 'io.github.juuxel.loom-quiltflower' version '1.7.+'
+	id "org.quiltmc.quilt-mappings-on-loom" version "4.2.+"
+	alias(libs.plugins.fabric.loom)
 }
 
-sourceCompatibility = JavaVersion.VERSION_16
-targetCompatibility = JavaVersion.VERSION_16
-
 archivesBaseName = project.archives_base_name
-version = project.mod_version
+version = "$mod_version+build.$build_number-${libs.versions.minecraft.get()}"
 group = project.maven_group
 
-dependencies {
-	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings loom.layered() {
-		officialMojangMappings()
-		parchment("org.parchmentmc.data:parchment-1.17.1:BLEEDING-SNAPSHOT@zip")
-	}
-	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+repositories {
+	maven { url = "https://maven.parchmentmc.net/" }
+}
 
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+loom {
+	accessWidenerPath = file("src/main/resources/cab.accesswidener")
+}
+
+dependencies {
+	minecraft libs.minecraft
+	mappings loom.layered {
+		it.addLayer(quiltMappings.mappings("org.quiltmc:quilt-mappings:${libs.versions.quilt.mappings.get()}:v2"))
+		it.parchment("org.parchmentmc.data:parchment-1.18.2:2022.03.13@zip")
+		it.officialMojangMappings {
+			setNameSyntheticMembers(false)
+		}
+	}
+
+	modImplementation libs.fabric.loader
+
+	modImplementation libs.fabric.api
 }
 
 processResources {
-	inputs.property "version", project.version
+	inputs.property "version", version
 
-	filesMatching("fabric.mod.json") {
-		expand "version": project.version
+	filesMatching('fabric.mod.json') {
+		expand "version": version
 	}
 }
 
-// Produce a sources distribution
 java {
 	withSourcesJar()
+	withJavadocJar()
+	toolchain.languageVersion = JavaLanguageVersion.of(17)
 }
 
-// Add the licence to all distributions
-tasks.withType(Jar).configureEach {
-	it.from rootProject.file('LICENCE.txt')
+tasks.withType(JavaCompile).configureEach {
+	it.options.release = 17
+	it.options.encoding = 'UTF-8'
+}
+
+compileJava {
+	options.compilerArgs += '--enable-preview'
+}
+
+jar {
+	from('LICENSE') {
+		rename {
+			"${it}_$archivesBaseName"
+		}
+	}
 }
 
 publishing {
 	publications {
 		mavenJava(MavenPublication) {
-			// Main
-			artifact(remapJar) { builtBy remapJar }
-			// Sources
-			artifact(sourcesJar) { builtBy remapSourcesJar }
+			from components.java
 		}
 	}
-	repositories {}
+	repositories {
+		if (project.hasProperty("siphalorMavenUser")) {
+			maven {
+				name = "Siphalor"
+				url = "https://maven.siphalor.de/upload.php"
+				credentials {
+					username = siphalorMavenUser
+					password = siphalorMavenPassword
+				}
+			}
+		}
+	}
 }
